Add demo image. Change image in js.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Connecting up Google Cardboard to web APIs</title>
+    <title>VisionCaster - Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <style>
@@ -125,7 +125,7 @@
         floor.rotation.x = -Math.PI / 2;
         scene.add(floor);
 
-        var particleTexture = THREE.ImageUtils.loadTexture('textures/particle.png'),
+        var particleTexture = THREE.ImageUtils.loadTexture('images/demo1.jpg'),
             spriteMaterial = new THREE.SpriteMaterial({
             map: particleTexture,
             color: 0xffffff
