Add particle image back.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         floor.rotation.x = -Math.PI / 2;
         scene.add(floor);
 
-        var particleTexture = THREE.ImageUtils.loadTexture('images/demo1.jpg'),
+        var particleTexture = THREE.ImageUtils.loadTexture('textures/particle.png'),
             spriteMaterial = new THREE.SpriteMaterial({
             map: particleTexture,
             color: 0xffffff
