Add device orientation and split screen

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>VisionCaster</title>
-    <script src="../js/three.js"></script>
-    <script src="../js/OrbitControls.js"></script>
-    <script src="../js/StereoEffect.js"></script>
-    <script src="../js/DeviceOrientationControls.js"></script>
+    <script src="js/three.js"></script>
+    <script src="js/OrbitControls.js"></script>
+    <script src="js/StereoEffect.js"></script>
+    <script src="js/DeviceOrientationControls.js"></script>
 </head>
 <style>
     body { margin: 0; overflow: hidden; background-color: #000; }
@@ -14,10 +14,10 @@
 <body>
 <video id="camera" width="320" height="240" autoplay></video>
 <canvas id="video-canvas-buffer" width="1320" height="1240"></canvas>
-<img id="image" alt="" src="../images/demo1.jpg"/>
+<img id="image" alt="" src="images/demo1.jpg"/>
 
 <div id="canvas"></div>
 
-<script src="../js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
