--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </style>
 <body>
 <canvas id="video-canvas-buffer" width="1320" height="1240"></canvas>
-<img id="image" alt="" src="images/demo1.jpg"/>
+<img id="image" alt="" src="images/demo.jpg"/>
 
 <div id="canvas"></div>
 
