Add jQuery.  Add stats var.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
     <title>VisionCaster</title>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/three.js"></script>
     <script src="js/StereoEffect.js"></script>
     <script src="js/DeviceOrientationControls.js"></script>
     <script src="js/OrbitControls.js"></script>
-   
-
 </head>
 <style>
     body { margin: 0; overflow: hidden; background-color: #000; }
