add files and stereoeffect

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </style>
 <body>
 <canvas id="video-canvas-buffer" width="1320" height="1240"></canvas>
-<img id="image" alt="" src="images/demo.jpg"/>
+
+<img id="image" alt="" src="images/4993048448_b2a526bb84_b.jpg"/>
 
 <div id="canvas"></div>
 
