add africa images

--- a/webvr/index.html
+++ b/webvr/index.html
@@ -112,7 +112,7 @@ Create the material that we will load our mockup into and apply to our cylinder 
 var material = new THREE.MeshBasicMaterial( {
   transparent: true,
   side: THREE.DoubleSide,
-  map: THREE.ImageUtils.loadTexture( 'img/puydesancy-overlay.png' )
+  map: THREE.ImageUtils.loadTexture( 'img/africa-overlay.png' )
 });
 
 /*
@@ -125,7 +125,7 @@ var mesh = new THREE.Mesh( geometry, material );
 Add our cylinder object to the scene. The default position of elements added to a three.js scene is 0,0,0, which is also the default position of our scene's camera. So our camera sits inside our cylinder.
 */
 
-//scene.add( mesh );
+scene.add( mesh );
 
 /*
 To adjust the distance between our mockups and the user, we can optionally scale our mesh. If we apply 0.5 to the X,Y,Z, for example, the radius shrinks by half, and the mockups become twice as close to our eyes. Because we are scaling proportionally (equal on X,Y,Z) the mockups do not _appear_ any larger, but the stereo effect of the VR headset tells us they are closer. Play with this setting to find a value that you like.
@@ -145,7 +145,7 @@ Create the material we will load our background image into.
 */
 
 var material = new THREE.MeshBasicMaterial( {
-  map: THREE.ImageUtils.loadTexture( 'img/puydesancy.jpg' )
+  map: THREE.ImageUtils.loadTexture( 'img/africa.jpg' )
 } );
 
 /*
