add touch event for swapping out the images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@ body {
   -->
 <script src="build/webvr-manager.js"></script>
 
+<script src="js/deps/jquery-1.11.3.min.js"></script>
+
 <!-- Main JS app file -->
 <script src="src/app.js"></script>
+
+
 
 </html>
